Ajuste das entidades de Secretaria, crud completo.
