# src/main/resources/static/openapi.yaml
@@ -62,8 +62,7 @@ paths:
                 nome:
                   type: string
                 status:
-                  type: string
-                  enum: [A_INICIAR, EM_ANDAMENTO, ATRASADO, CONCLUIDO]
+                  $ref: '#/components/schemas/StatusProjeto'
                 responsavelId:
                   type: integer
                   format: int64
@@ -168,8 +167,7 @@ paths:
                 nome:
                   type: string
                 status:
-                  type: string
-                  enum: [A_INICIAR, EM_ANDAMENTO, ATRASADO, CONCLUIDO]
+                  $ref: '#/components/schemas/StatusProjeto'
                 responsavelId:
                   type: integer
                   format: int64
@@ -227,12 +225,12 @@ paths:
             type: integer
             format: int64
       responses:
-        '204':
+        '200':
           description: Projeto excluído com sucesso
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SucessMessage'
+                $ref: '#/components/schemas/SuccessMessage'
         '404':
           description: Projeto não encontrado
           content:
@@ -258,7 +256,7 @@ paths:
           in: path
           required: true
           description: ID do projeto
-          schema: 
+          schema:
             type: integer
             format: int64
         - name: novoStatus
@@ -266,8 +264,7 @@ paths:
           required: true
           description: Novo status do projeto
           schema:
-            type: string
-            enum: [A_INICIAR, EM_ANDAMENTO, ATRASADO, CONCLUIDO]
+            $ref: '#/components/schemas/StatusProjeto'
       responses:
         '200':
           description: Status alterado com sucesso
@@ -307,8 +304,7 @@ paths:
           required: true
           description: Status para filtrar
           schema:
-            type: string
-            enum: [A_INICIAR, EM_ANDAMENTO, ATRASADO, CONCLUIDO]
+            $ref: '#/components/schemas/StatusProjeto'
         - name: page
           in: query
           description: Número da página
@@ -364,8 +360,7 @@ paths:
                   type: object
                   properties:
                     statusProjeto:
-                      type: string
-                      enum: [A_INICIAR, EM_ANDAMENTO, ATRASADO, CONCLUIDO]
+                      $ref: '#/components/schemas/StatusProjeto'
                     quantidade:
                       type: integer
         '500':
@@ -388,8 +383,7 @@ paths:
           required: true
           description: Status do projeto para calcular a média
           schema:
-            type: string
-            enum: [A_INICIAR, EM_ANDAMENTO, ATRASADO, CONCLUIDO]
+            $ref: '#/components/schemas/StatusProjeto'
       responses:
         '200':
           description: Média calculada com sucesso
@@ -431,7 +425,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SucessMessage'
+                $ref: '#/components/schemas/SuccessMessage'
         '400':
           description: Bad Request
           content:
@@ -462,7 +456,7 @@ paths:
         - Usuario
       summary: Realiza o login do usuário
       description: 'Realiza o login do usuário'
-      
+
       requestBody:
         content:
           application/json:
@@ -471,9 +465,11 @@ paths:
               properties:
                 email:
                   type: string
+                  format: email
                 password:
                   type: string
                   format: password
+                  minLength: 6
         required: true
       responses:
         '200':
@@ -481,16 +477,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  token:
-                    type: string
-                    description: Token de autenticação
-                  nome:
-                    type: string
-                  email:
-                    type: string
-                  
+                $ref: '#/components/schemas/LoginResponse'
         '400':
           description: Bad Request
           content:
@@ -517,7 +504,7 @@ paths:
         - Secretaria
       summary: Lista todas as secretarias
       description: ''
-      
+
       responses:
         '200':
           description: Successful operation
@@ -567,96 +554,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SucessMessage'
-        '400':
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorMessage'
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorMessage'
-        '500':
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorMessage'
-
-    put:
-      operationId: atualizarSecretaria
-      tags:
-        - Secretaria
-      summary: Atualiza uma secretaria existente
-      description: ''
-      parameters:
-        - name: id
-          in: query
-          required: true
-          description: ID da secretaria a ser atualizada
-          schema:
-            type: integer
-            format: int64
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                nmSecretaria:
-                  type: string
-        required: true
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/SucessMessage'
-        '400':
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorMessage'
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorMessage'
-        '500':
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorMessage'
-
-    delete:
-      operationId: excluirSecretaria
-      tags:
-        - Secretaria
-      summary: Exclui uma secretaria existente
-      description: ''
-      parameters:
-        - name: id
-          in: query
-          required: true
-          description: ID da secretaria a ser excluída
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/SucessMessage'
+                $ref: '#/components/schemas/SuccessMessage'
         '400':
           description: Bad Request
           content:
@@ -723,58 +621,253 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorMessage'
-
-
-  /responsavel:
-      get:
-        operationId: listarResponsaveis
-        tags:
-          - Responsavel
-        summary: Lista todos os responsáveis
-        description: ''
-        
-        responses:
-          '200':
-            description: Successful operation
-            content:
-              application/json:
-                schema:
-                  type: array
-                  items:
-                    $ref: '#/components/schemas/Responsavel'
-          '400':
-            description: Bad Request
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/ErrorMessage'
-          '401':
-            description: Unauthorized
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/ErrorMessage'
-          '500':
-            description: Internal Server Error
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/ErrorMessage'
-
-      post:
-        operationId: cadastrarResponsavel
-        tags:
-          - Responsavel
-        summary: Cadastra um novo responsável
-        description: ''
-        requestBody:
+    put:
+      operationId: atualizarSecretariaPorId
+      tags:
+        - Secretaria
+      summary: Atualiza uma secretaria existente
+      description: ''
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID da secretaria a ser atualizada
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                nmSecretaria:
+                  type: string
+        required: true
+      responses:
+        '200':
+          description: Successful operation
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  nome:
-                    type: string
+                $ref: '#/components/schemas/SuccessMessage'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+    delete:
+      operationId: excluirSecretaria
+      tags:
+        - Secretaria
+      summary: Exclui uma secretaria existente
+      description: ''
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID da secretaria a ser excluída
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessMessage'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+
+
+  /responsavel:
+    get:
+      operationId: listarResponsaveis
+      tags:
+        - Responsavel
+      summary: Lista todos os responsáveis
+      description: ''
+
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Responsavel'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+    post:
+      operationId: cadastrarResponsavel
+      tags:
+        - Responsavel
+      summary: Cadastra um novo responsável
+      description: ''
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CadastroResponsavelBody'
+        required: true
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Responsavel'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+    put:
+      operationId: atualizarResponsavelPorId
+      tags:
+        - Responsavel
+      summary: Atualiza um responsável existente
+      description: ''
+      parameters:
+        - name: id
+          in: query
+          required: true
+          description: ID do responsável a ser atualizado
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AtualizarResponsavelBody'
+        required: true
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Responsavel'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+    delete:
+      operationId: excluirResponsavel
+      tags:
+        - Responsavel
+      summary: Exclui um responsável existente
+      description: ''
+      parameters:
+        - name: id
+          in: query
+          required: true
+          description: ID do responsável a ser excluído
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessMessage'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
 
 
 
@@ -784,7 +877,7 @@ components:
     ListaProjetoResponse:
       type: object
       properties:
-        listaprojetos:
+        listaProjetos:
           type: array
           items:
             $ref: '#/components/schemas/Projeto'
@@ -798,8 +891,7 @@ components:
         nome:
           type: string
         status:
-          type: string
-          enum: [A_INICIAR, EM_ANDAMENTO, ATRASADO, CONCLUIDO]
+          $ref: '#/components/schemas/StatusProjeto'
         responsavelId:
           type: integer
           format: int64
@@ -826,9 +918,11 @@ components:
           type: string
         email:
           type: string
+          format: email
         password:
           type: string
           format: password
+          minLength: 6
 
     Cargo:
       type: object
@@ -849,12 +943,17 @@ components:
           type: string
         email:
           type: string
+          format: email
         cargoId:
           type: integer
           format: int64
+        nmCargo:
+          type: string
         secretariaId:
           type: integer
           format: int64
+        nmSecretaria:
+          type: string
 
     Secretaria:
       type: object
@@ -865,8 +964,49 @@ components:
         nmSecretaria:
           type: string
 
+    CadastroResponsavelBody:
+      type: object
+      properties:
+        cargoId:
+          type: integer
+          format: int64
+        secretariaId:
+          type: integer
+          format: int64
+        usuario:
+          $ref: '#/components/schemas/Usuario'
 
-    SucessMessage:
+    AtualizarResponsavelBody:
+      type: object
+      properties:
+        cargoId:
+          type: integer
+          format: int64
+        secretariaId:
+          type: integer
+          format: int64
+
+
+    StatusProjeto:
+      type: string
+      enum: [ A_INICIAR, EM_ANDAMENTO, ATRASADO, CONCLUIDO ]
+
+    LoginResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        token:
+          type: string
+          description: Token de autenticação
+        nome:
+          type: string
+        email:
+          type: string
+          format: email
+
+    SuccessMessage:
       type: object
       properties:
         message:
